--- a/src/assets/scss/pages/style.scss
+++ b/src/assets/scss/pages/style.scss
@@ -1410,13 +1410,15 @@ table {
  * 14. Panel
  */
 .panel {
-  border-right: 1px solid rgba(0, 0, 0, 0.06);
+  //border-right: 1px solid rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   float: left;
   min-height: 100%;
-  padding: 30px; }
+  //padding: 30px; 
+  width:100%;
+  }
   @media (max-width: 576px) {
     .panel {
       border-bottom: 1px solid rgba(0, 0, 0, 0.06);
