--- a/src/assets/css/pages/steps.css
+++ b/src/assets/css/pages/steps.css
@@ -51,8 +51,8 @@
 }
 
 #steps {
-  width: 505px;
-  margin: 50px auto;
+  width: 71%;
+  margin: 125px auto;
 }
 
 body {
@@ -63,7 +63,6 @@ body {
 .step {
   width: 48px;
   height: 48px;
-  background-color: white;
   display: inline-block;
   border: 4px solid;
   border-color: transparent;
@@ -88,12 +87,12 @@ body {
   height: 3px;
   display: block;
   background-color: white;
-  transform: translate(-90px, 20px);
+  transform: translate(-90px, 28px);
   content: '';
 }
 
 .step:after {
-  width: 150px;
+  width: 163px;
   display: block;
   transform: translate(-55px, 3px);
   color: #818698;
@@ -106,9 +105,17 @@ body {
   transform: translate(-55px, -1px);
 }
 
-.step.active {
+.step.active a {
   border-color: #73b5e8;
   color: #73b5e8;
+  background-color: #fff;
+  border: 3px solid;
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  vertical-align: middle;
+  text-align: center;
+  padding: 13px;
 }
 
 .step.active:before {
@@ -119,12 +126,35 @@ body {
   color: #73b5e8;
 }
 
-.step.done {
-  background-color: #58bb58;
+.step.done a.btn-success {
+  border-color: #73b5e8 !important;
+  color: #73b5e8 !important;
+  background-color: #fff  !important;
+  border: 3px solid;
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  vertical-align: middle;
+  text-align: center;
+  padding: 13px;
+}
+.step.done a.btn-default {
+  background-color: #73b5e8;
   border-color: #58bb58;
   color: white;
+  border: 3px solid;
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  vertical-align: middle;
+  text-align: center;
+  padding: 13px;
 }
 
 .step.done:before {
-  background-color: #58bb58;
+  background-color: #73b5e8;
+}
+
+.logo-form {
+  margin-top: 5%;
 }
